; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/xilinx/extr_xilinx_dma.c_xilinx_dma_chan_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/xilinx/extr_xilinx_dma.c_xilinx_dma_chan_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xilinx_dma_chan = type { i32 }

@XILINX_DMA_REG_DMACR = common dso_local global i32 0, align 4
@XILINX_DMA_DMAXR_ALL_IRQ_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xilinx_dma_chan*)* @xilinx_dma_chan_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xilinx_dma_chan_reset(%struct.xilinx_dma_chan* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xilinx_dma_chan*, align 8
  %4 = alloca i32, align 4
  store %struct.xilinx_dma_chan* %0, %struct.xilinx_dma_chan** %3, align 8
  %5 = load %struct.xilinx_dma_chan*, %struct.xilinx_dma_chan** %3, align 8
  %6 = call i32 @xilinx_dma_reset(%struct.xilinx_dma_chan* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.xilinx_dma_chan*, %struct.xilinx_dma_chan** %3, align 8
  %13 = load i32, i32* @XILINX_DMA_REG_DMACR, align 4
  %14 = load i32, i32* @XILINX_DMA_DMAXR_ALL_IRQ_MASK, align 4
  %15 = call i32 @dma_ctrl_set(%struct.xilinx_dma_chan* %12, i32 %13, i32 %14)
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %11, %9
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @xilinx_dma_reset(%struct.xilinx_dma_chan*) #1

declare dso_local i32 @dma_ctrl_set(%struct.xilinx_dma_chan*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
